client/src/components/MainTab/MainTab.scss
.main-tab {
  margin-top: -30px;
  display: flex;
  justify-content: center;

  input {
    background: transparent;
  }
}

.main-tab-inner {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 76px;
  background: $off-white;
  border: 1px solid #ccd3d3;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1), 0px 4px 20px rgba(0, 0, 0, 0.1);
  border-radius: 10px;

  > div {
    margin: 16px 0;
    padding: 0 24px;
    display: flex;
    flex-direction: column;
    border-right: 1px solid $line;
    position: relative;

    .sub-head {
      font-family: Noto Sans KR;
      font-style: normal;
      font-weight: bold;
      font-size: 12px;
      line-height: 17px;
      text-transform: uppercase;
      color: $primary-3;
      margin-bottom: 4px;
      padding-left: 1px;
    }

    .sub-content {
      font-family: Noto Sans KR;
      font-style: normal;
      font-weight: normal;
      font-size: 16px;
      line-height: 23px;
      text-transform: uppercase;
      color: $title-active;

      &.input-content {
        width: 172px;
        padding: 3px;
        &::placeholder {
          color: $label;
        }
      }
      &.input-amount {
        width: 96px;
        text-align: right;
        padding: 3px;
        &::placeholder {
          color: $label;
        }
      }
      &.operator {
        font-size: 20px;
        padding: 0 5px;
        width: 21px;
      }
    }
  }

  .label {
    color: $label !important;
  }

  .wci-chevron-down {
    font-size: 16px;
    line-height: 23px;
    padding-left: 5px;
    margin-left: auto;
  }

  .amount {
    border: 0;
  }

  .flex {
    display: flex;
    min-width: 94px;
  }

  .drop-down {
    opacity: 1;
    transition: all 0.25s;
    display: flex;
    flex-direction: column;
    padding: 0px;
    width: 140px;
    background: $off-white;
    border: 1px solid $line;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1), 0px 4px 20px rgba(0, 0, 0, 0.1);
    border-radius: 10px;
    position: absolute;
    top: 65px;
    left: 0px;
    > li {
      padding: 16px 24px;
      display: flex;
      > .wci-close {
        margin-left: auto;
        font-size: 8px;
        color: $body;
        cursor: pointer;
      }
    }
    > li:not(:last-child) {
      border-bottom: 1px solid $line;
    }
    .active {
      color: $primary-3;
      font-weight: 500;
    }
    :hover {
      background: $background;
    }
    :first-child:hover {
      border-radius: 10px 10px 0px 0px;
    }
    :last-child:hover {
      border-radius: 0px 0px 10px 10px;
    }
    &.blind-opacity {
      opacity: 0;
      pointer-events: none;
      user-select: none;
    }
  }

  .save-button-large {
    display: flex;
    flex-direction: row;
    align-items: center;
    padding: 8px;
    border: 2px solid $primary;
    box-sizing: border-box;
    border-radius: 10px;
    width: 40px;
    height: 40px;
    margin-right: 16px;
    color: $primary;
    &.active {
      background: $primary;
      border-radius: 10px;
      color: $off-white;
    }
  }
}
.modal {
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.3);
  display: flex;
  align-items: center;
  justify-content: center;
  &.login {
    z-index: 10;
    .modal-content {
      border-radius: 50px;
    }
    .modal-login-title {
      font-size: 40px;
      font-family: Do Hyeon;
      color: $title-active;
    }
    .modal-login-text {
      margin-top: 20px;
      font-size: 16px;
      color: $body;
    }
    .cancel {
      margin-top: 30px;
      cursor: pointer;
    }
    & div {
      text-align: center;
    }
  }
}
.blind {
  display: none;
}
.modal-content {
  width: 400px;
  height: 230px;
  background: $off-white;
  border-radius: 10px;
  padding: 40px;
  .modal-title {
    font-size: 18px;
    line-height: 22px;
    color: $title-active;
  }
  .modal-input {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    padding: 10px;
    width: 320px;
    height: 42px;
    background: $background;
    border: 1px solid $line;
    box-sizing: border-box;
    border-radius: 10px;
    margin-top: 24px;
    color: $title-active;
    ::placeholder {
      color: #c1c5c5;
    }
  }
  .modal-flex {
    margin-top: 40px;
    display: flex;
    justify-content: space-between;
    > div {
      font-size: 18px;
      line-height: 22px;
    }
    .cancel {
      color: $label;
    }
    .add {
      color: $primary-3;
    }
    .delete {
      color: #f45452;
    }
  }
}

